# ESP32S3-IDF

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml  includes.h  main.c
main/BSP/: bsp.c  bsp.h  bsp_button.c  bsp_button.h  bsp_command.c  bsp_command.h  bsp_fat.c  bsp_fat.h  bsp_lcd.c  bsp_lcd.h  bsp_mqtt_client.c  bsp_mqtt_client.h  bsp_sntp.c  bsp_sntp.h  bsp_softap.c  bsp_softap.h  bsp_station.c  bsp_station.h  bsp_tca9554.c  bsp_tca9554.h  bsp_uart.c  bsp_uart.h  bsp_ui.c  bsp_ui.h  bsp_usbx_cdc.c  bsp_usbx_cdc.h
main/CherryUSB/CherryUSB/: cherryusb.cmake
